--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
- <BLEDevice.h>
-<BLEUtils.h>
- <BLEScan.h>
+#include <BLEDevice.h>
+#include <BLEUtils.h>
+#include <BLEScan.h>
 
 <!DOCTYPE html>
 <html lang="pt-BR">
