--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-#include <BLEDevice.h>
-#include <BLEUtils.h>
-#include <BLEScan.h>
+ <BLEDevice.h>
+ <BLEUtils.h>
+ <BLEScan.h>
 
 <!DOCTYPE html>
 <html lang="pt-BR">
