--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <title>Protótipo Pulseira "Segue o Bonde"</title>
   <div class="pulseira">
     <div class="led" id="led"></div>
   </div>
