--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pulseira de Proximidade</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <title>Protótipo Pulseira "Segue o Bonde"</title>
+  <title>Protótipo Pulseira de Proximidade "Segue o Bonde"</title>
   <div class="pulseira">
     <div class="led" id="led"></div>
   </div>
