--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ <title>Protótipo Pulseira de Proximidade "Segue o Bonde"</title>
  <BLEDevice.h>
  <BLEUtils.h>
  <BLEScan.h>
@@ -7,7 +8,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Protótipo Pulseira de Proximidade "Segue o Bonde"</title>
+  <title>c</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
