--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
- <title>Protótipo Pulseira de Proximidade "Segue o Bonde"</title>
- <BLEDevice.h>
+ Protótipo Pulseira de Proximidade "Segue o Bonde"<BLEDevice.h>
  <BLEUtils.h>
  <BLEScan.h>
 
@@ -8,7 +7,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>c</title>
+  <title>Protótipo Pulseira de Proximidade "Segue o Bonde"</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
