--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <BLEDevice.h>
-  Protótipo Pulseira de Proximidade "Segue o Bonde"<BLEUtils.h>
- <BLEScan.h>
+ <BLEUtils.h>
+  Protótipo Pulseira de Proximidade "Segue o Bonde"<BLEScan.h>
 
 <!DOCTYPE html>
 <html lang="pt-BR">
