--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
- <BLEDevice.h>
+      Protótipo Pulseira de Proximidade "Segue o Bonde"
+<BLEDevice.h>
  <BLEUtils.h>
-  Protótipo Pulseira de Proximidade "Segue o Bonde"<BLEScan.h>
+ <BLEScan.h>
 
 <!DOCTYPE html>
 <html lang="pt-BR">
