--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-      Protótipo Pulseira de Proximidade "Segue o Bonde"
-<BLEDevice.h>
+ <BLEDevice.h>
  <BLEUtils.h>
  <BLEScan.h>
 
@@ -12,6 +11,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1 class="title">Protótipo Pulseira</h1>
   <div class="pulseira">
     <div class="led" id="led"></div>
   </div>
